--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,9 +5,21 @@ env:
   MIRROR_URL: "git@github.com:EpitechPromo2028/B-PSU-200-LIL-2-1-minishell1-alexandre.garbe.git"
 
 jobs:
+    build:
+      runs-on: ubuntu-latest
+      container:
+        image: epitechcontent/epitest-docker:latest
+      steps:
+        - name: Checkout
+          uses: actions/checkout@v2
+          with:
+            fetch-depth: 0
+        - name: Make
+          run: make
     deploy:
-        runs-on: ubuntu-latest
-        steps:
+      runs-on: ubuntu-latest
+      needs: build
+      steps:
         - name: Checkout
           uses: actions/checkout@v2
           with:
